--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/SurajYadav22/My-Blog#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0"
